--- a/package.json
+++ b/package.json
@@ -4,21 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose",
+    "start": "node index.js",
+    "dev" : "nodemon"
+  },
+  "engines": {
+    "node": "14.16.1"
   },
   "keywords": [],
   "author": "lily-crown 999",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
+    "helmet": "^4.6.0",
     "joi": "^13.7.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.14",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.3",
