--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --watchAll --verbose",
     "start": "node index.js",
-    "dev" : "nodemon"
+    "dev": "nodemon"
   },
   "engines": {
     "node": "14.16.1"
@@ -30,6 +30,8 @@
     "mongoose": "^5.12.14",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.3",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.7"
   },
