--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
   "author": "lily-crown 999",
   "license": "MIT",
   "dependencies": {
-    "api-doc-generator": "^0.0.2",
-    "apidoc": "^0.28.1",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
-    "config": "^3.3.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
@@ -30,9 +28,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.12.14",
-    "node-api-doc-generator": "^1.1.1",
     "nodemon": "^2.0.12",
-    "supertest": "^6.1.3",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
