--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,5 @@
 
 
- MONGOURL = "mongodb+srv://Lily-Crown999:Lily-Crown999@cluster0.ynj90.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+ MONGOURL = "mongodb+srv://Lily-Crown999:Lily-Crown999@cluster0.ynj90.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
  devMONGOURL = "mongodb://localhost:27017/vidly-app-999"
  jwtPrivateKey = "Michael"
